--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,11 +4,11 @@ descrption: A new Flutter application. # 描述
 
 publish_to: 'node' # 指定包 发布的位置
 
-version: 1.0 # 当前包的版本号
+version: '1.0.0' # 当前包的版本号
 
 # 配置sdk 的环境 配置之后很多命令就可以在终端上运行了
 environment:
-  sdk: '>=2.10.0 <3.0.0'
+  sdk: '>=2.10.0 <3.3.3'
 
 # 线上生产环境依赖
 dependencies:
